# adc24-workshop

./: .cmake-format.yaml  .gitattributes  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
cmake/: CompilerWarnings.cmake
docs/plantuml/: pluginClassDiagram.puml
plugin/: CMakeLists.txt
plugin/include/flanger/: Flanger.h  FractionalDelayLine.h  PluginProcessor.h
plugin/source/: FractionalDelayLine.cpp  PluginProcessor.cpp
py/: main.py
py/flanger/: flanger.py
py/test/: test_flanger.py
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp  DelayLineTests.cpp  FlangerEnd2EndTests.cpp
